# Image-API

./: Cargo.toml  Dockerfile
crates/api/: Cargo.toml
crates/api/src/: icc.rs  main.rs
crates/okmain/: .cargo_vcs_info.json  Cargo.toml
crates/okmain/src/: kmeans.rs  lib.rs
crates/okmain/src/kmeans/: adaptive.rs
frontend/: app.js  color-group.worker.js  index.html  style.css
