[package]
name = "api"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "api"
path = "src/main.rs"

[dependencies]
okmain = { path = "../okmain", features = ["image"] }
axum = { version = "0.8", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "gif", "webp", "bmp", "tiff"] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
tower-http = { version = "0.6", features = ["cors", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
lru = "0.16"
uuid = { version = "1", features = ["v4"] }
lcms2 = "6.1.1"
rgb = "0.8"
